samples/_failures_safe/1761267469_1f2eeb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d03b030.c: In function ‘main’:
./samples/SAFE/__tmp_6d03b030.c:206:5: error: expected expression at end of input
  206 |     if (
      |     ^~
./samples/SAFE/__tmp_6d03b030.c:206:5: error: expected declaration or statement at end of input
